[package]
name = "orbita"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
git2 = "0.19.0"
mlua = {version = "0.10.2", features = ["vendored", "luajit"]}
tempfile = "3.15.0"
version-compare = "0.2.0"

[[bin]]
name = "orbita"
path = "src/main.rs"
